--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.base",
   "compilerOptions": {
     "rootDir": "src/",
-    "outDir": "./build",
+    "outDir": "./dist",
     "paths": {
       "@cutephoton/ts-yaml" : ["./src/ts-yaml"]
     }
